# halucinor

./: .gitignore
halucinator/: README.md  pyproject.toml
halucinator/doc/source/: conf.py  index.rst
halucinator/doc/source/development/: index.rst  project-structure.rst
halucinator/doc/source/quickstart/: index.rst
halucinator/docker/halucinator-qemu/: Dockerfile
halucinator/docker/scripts/: build.sh
halucinator/halucinator/: __init__.py  main.py
halucinator/halucinator/collections/: nesteddict.py
halucinator/halucinator/config/: __init__.py
halucinator/halucinator/platform/: __init__.py  virtualenv.py
halucinator/halucinator/platform/container/: docker.py
halucinator/halucinator/targets/: executiontarget.py
halucinator/scripts/: builddocs.sh
halucinator/tests/: test_halucinator.py
